# Trains-DB-UDP-Linux

MainClient/: CMakeLists.txt  Client.cpp  Client.h  MainClient.cpp
MainServer/: CMakeLists.txt  Controller.cpp  Controller.h  DB_Connector.cpp  DB_Connector.h  MainServer.cpp  Server.cpp  Server.h
